<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activitiesBackground"
    tools:context=".DefaultWifiChangeActivity">

    <ImageButton
        android:id="@+id/goBackButton2"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black_40dp" />

    <Button
        android:id="@+id/changeDefaultWifiButton"
        android:layout_width="180dp"
        android:layout_height="57dp"
        android:layout_marginTop="64dp"
        android:text="@string/changeDefaultWifiButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordDefaultEditText" />

    <TextView
        android:id="@+id/changeDefaultWifiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeDefaultWifiInfo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/ssidDefaultEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="SSID"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeDefaultWifiTextView" />

    <EditText
        android:id="@+id/passwordDefaultEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="password"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ssidDefaultEditText" />

    <TextView
        android:id="@+id/changeDefaultWifiInfoTextView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/changeDefaultWifiInfo2"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeDefaultWifiTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>