<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activitiesBackground"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/turnHorizontalBar"
        android:layout_width="@dimen/turnLayoutWidth"
        android:layout_height="@dimen/turnBarHeight"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/turnBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/control_bar_background" />

        <ImageView
            android:id="@+id/turnProgressMark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleX="0"
            app:srcCompat="@drawable/turn_progress_mark" />

        <SeekBar
            android:id="@+id/turnSeekBar"
            android:layout_width="@dimen/turnBarWidth"
            android:layout_height="@dimen/turnBarHeight"
            android:layout_gravity="center"
            android:background="@null"
            android:progress="50"
            android:progressDrawable="@null"
            android:scrollbarThumbHorizontal="@null"
            android:scrollbarThumbVertical="@null"
            android:scrollbarTrackVertical="@null"
            android:thumb="@drawable/control_bar_thumb" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/throttleVerticalBar"
        android:layout_width="@dimen/throttleBarWidth"
        android:layout_height="@dimen/throttleLayoutHeight"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/throttleBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/control_bar_background" />

        <ImageView
            android:id="@+id/throttleProgressMark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleY="0"
            app:srcCompat="@drawable/throttle_progress_mark" />

        <SeekBar
            android:id="@+id/throttleSeekBar"
            android:layout_width="@dimen/throttleBarHeight"
            android:layout_height="@dimen/throttleBarHeight"
            android:layout_gravity="center"
            android:background="@null"
            android:progress="50"
            android:progressDrawable="@null"
            android:rotation="270"
            android:scrollbarThumbHorizontal="@null"
            android:scrollbarTrackVertical="@null"
            android:thumb="@drawable/control_bar_thumb" />

    </FrameLayout>

    <ImageButton
        android:id="@+id/goToSettingsButton"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="62dp"
        android:layout_height="49dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68"
        app:srcCompat="@drawable/ic_settings_black_24dp" />

    <TextView
        android:id="@+id/delayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delay"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/delayFeedbackInfoTextView"
        app:layout_constraintStart_toStartOf="@+id/delayFeedbackInfoTextView"
        app:layout_constraintTop_toBottomOf="@+id/delayFeedbackInfoTextView" />

    <FrameLayout
        android:id="@+id/realtimeModelLayout"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backWheelImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:translationX="20dp"
            app:srcCompat="@drawable/wheel" />

        <ImageView
            android:id="@+id/backProfileImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationX="20dp"
            app:srcCompat="@drawable/back_profile" />

        <ImageView
            android:id="@+id/frontProfileImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/front_profile" />

        <ImageView
            android:id="@+id/frontWheelImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/wheel" />

    </FrameLayout>

    <TextView
        android:id="@+id/speedInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speedInfo"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/robotVelocityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Velocity"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/speedInfoTextView"
        app:layout_constraintStart_toStartOf="@+id/speedInfoTextView"
        app:layout_constraintTop_toBottomOf="@+id/speedInfoTextView" />

    <TextView
        android:id="@+id/angleInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/angleInfo"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/robotAngleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Angle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/angleInfoTextView"
        app:layout_constraintStart_toStartOf="@+id/angleInfoTextView"
        app:layout_constraintTop_toBottomOf="@+id/angleInfoTextView" />

    <TextView
        android:id="@+id/delayFeedbackInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/delayFeedbackInfo"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>